--- a/utils/SyncClientLib/build.gradle
+++ b/utils/SyncClientLib/build.gradle
@@ -17,7 +17,7 @@ dependencies {
 }
 
 task uberjar(type: Jar) {
-    from files(sourceSets.main.output.classesDir)
+in    from files(sourceSets.main.output.classesDir)
     from configurations.runtime.asFileTree.files.collect { zipTree(it) }
 
     manifest {
