ERMS-3379:Abgleich KBART mit Titel (TIPP) Ebene ERMS-3372:Feld "notes" in der we:kb

--- a/server/gokbg3/grails-app/conf/application.yml
+++ b/server/gokbg3/grails-app/conf/application.yml
@@ -122,7 +122,7 @@ hibernate:
 environments:
     development:
         dataSource:
-            dbCreate: none # update
+            dbCreate: none # update // none because of database migration
             url: jdbc:postgresql://pghost:5432/gokbg3dev
             username: knowint
             password: knowint
@@ -155,7 +155,7 @@ environments:
             defaultCuratoryGroup: Local
     test:
         dataSource:
-            dbCreate: none # create-drop
+            dbCreate: none # create-drop // none because of database migration
             url: jdbc:postgresql://pghost:5432/gokbg3test
             username: knowint
             password: knowint
@@ -185,7 +185,7 @@ environments:
             disabled: true
     production:
         dataSource:
-            dbCreate: none #update
+            dbCreate: none #update // none because of database migration
             url: jdbc:postgresql://localhost:5432/gokbg3
             username: gokb
             password: knowint
