Bugfix CuratorGroup Search Index

--- a/server/gokbg3/grails-app/conf/elasticsearch/es_mapping.json
+++ b/server/gokbg3/grails-app/conf/elasticsearch/es_mapping.json
@@ -93,6 +93,15 @@
         }
       },
       {
+        "curatoryGroup": {
+          "match": "curatoryGroup",
+          "match_mapping_type": "string",
+          "mapping": {
+            "type": "keyword"
+          }
+        }
+      },
+      {
         "nominalPlatform": {
           "match": "nominalPlatform*",
           "match_mapping_type": "string",
