--- a/server/gokbg3/grails-app/conf/application.yml
+++ b/server/gokbg3/grails-app/conf/application.yml
@@ -225,6 +225,7 @@ gokb:
             orgs: gokborgs
             packages: gokbpackages
             platforms: gokbplatforms
+            deletedKBComponent: gokbdeletedcomponents
     tsvExportTempDirectory: /tmp/gokb/export
 
 quartz:
