--- a/server/gokbg3/build.gradle
+++ b/server/gokbg3/build.gradle
@@ -122,7 +122,7 @@ dependencies {
     compile 'org.grails.plugins:database-migration:3.0.4'
     compile 'org.liquibase:liquibase-core:3.5.5'
 
-    runtime 'com.github.albfernandez:juniversalchardet:2.3.0'
+    compile 'com.github.albfernandez:juniversalchardet:2.4.0'
     // https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml
     implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.0.0'
 
