--- a/server/gokbg3/grails-app/conf/elasticsearch/es_mapping.json
+++ b/server/gokbg3/grails-app/conf/elasticsearch/es_mapping.json
@@ -165,6 +165,9 @@
       "sortname" : {
         "type": "keyword"
       },
+      "ipAuthentication" : {
+        "type": "keyword"
+      },
       "componentType" : {
         "type": "keyword"
       },
