--- a/server/gokbg3/grails-app/conf/application.yml
+++ b/server/gokbg3/grails-app/conf/application.yml
@@ -221,11 +221,11 @@ gokb:
         cluster: gokbg3-test
         host: localhost
         indices:
-            tipps: gokbtipps
-            orgs: gokborgs
-            packages: gokbpackages
-            platforms: gokbplatforms
-            deletedKBComponent: gokbdeletedcomponents
+            tipps: wekbtipps
+            orgs: wekborgs
+            packages: wekbpackages
+            platforms: wekbplatforms
+            deletedKBComponent: wekbdeletedcomponents
     tsvExportTempDirectory: /tmp/gokb/export
 
 quartz:
