--- a/server/gokbg3/build.gradle
+++ b/server/gokbg3/build.gradle
@@ -86,6 +86,8 @@ dependencies {
     // https://mvnrepository.com/artifact/org.elasticsearch.client/elasticsearch-rest-high-level-client
     compile 'org.elasticsearch:elasticsearch:7.15.1'
     compile 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.15.1'
+    // https://mvnrepository.com/artifact/org.locationtech.spatial4j/spatial4j
+    implementation 'org.locationtech.spatial4j:spatial4j:0.8'
     compile 'org.apache.logging.log4j:log4j-api:2.7'
     compile 'org.apache.logging.log4j:log4j-core:2.7'
     compile 'org.apache.tika:tika-core:1.17'
