--- a/server/gokbg3/grails-app/conf/elasticsearch/es_mapping.json
+++ b/server/gokbg3/grails-app/conf/elasticsearch/es_mapping.json
@@ -1,5 +1,4 @@
 {
-  "component" : {
     "dynamic_templates": [
       {
         "provider": {
@@ -182,10 +181,9 @@
         "type": "keyword"
       },
       "suggest" : {
-        "type" : "string",
+        "type" : "text",
         "analyzer" : "autocomplete",
         "search_analyzer" : "standard"
       }
     }
-  }
 }
