--- a/files/frontend/semantic/src/theme.config
+++ b/files/frontend/semantic/src/theme.config
@@ -64,7 +64,7 @@
 @rating     : 'default';
 @search     : 'default';
 @shape      : 'default';
-@sidebar    : 'default';
+@sidebar    : 'wekb';
 @sticky     : 'default';
 @tab        : 'default';
 @toast      : 'default';
