--- a/files/frontend/semantic/src/theme.config
+++ b/files/frontend/semantic/src/theme.config
@@ -23,7 +23,7 @@
 
 /* Elements */
 @button     : 'default';
-@container  : 'default';
+@container  : 'wekb';
 @divider    : 'default';
 @emoji      : 'default';
 @flag       : 'default';
