ERMS-4357 nicer footer

--- a/files/frontend/semantic/src/theme.config
+++ b/files/frontend/semantic/src/theme.config
@@ -37,7 +37,7 @@
 @placeholder: 'default';
 @rail       : 'default';
 @reveal     : 'default';
-@segment    : 'default';
+@segment    : 'wekb';
 @step       : 'default';
 @text       : 'default';
 
