--- a/files/frontend/semantic/src/theme.config
+++ b/files/frontend/semantic/src/theme.config
@@ -45,7 +45,7 @@
 @breadcrumb : 'default';
 @form       : 'default';
 @grid       : 'default';
-@menu       : 'default';
+@menu       : 'wekb';
 @message    : 'default';
 @table      : 'default';
 
