--- a/files/frontend/semantic/src/theme.config
+++ b/files/frontend/semantic/src/theme.config
@@ -50,7 +50,7 @@
 @table      : 'default';
 
 /* Modules */
-@accordion  : 'default';
+@accordion  : 'wekb';
 @calendar   : 'default';
 @checkbox   : 'default';
 @dimmer     : 'default';
